--- a/index.html
+++ b/index.html
@@ -7,6 +7,27 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 	</head>
+	<style>
+	ul {
+    	list-style-type: none;
+    	margin: 0;
+    	padding: 0;
+    	overflow: hidden;
+	}
+	li {
+    	float: left;
+	}
+	li a {
+    	display: block;
+    	color: black;
+    	text-align: center;
+    	padding: 14px 16px;
+    	text-decoration: none;
+	}
+	li a:hover {
+    	background-color: yellow;
+	}
+	</style>
 	<body>
 		<!-- Nav -->
 		<link rel="stylesheet" type="text/css" href="assets/css/nav.css">
