--- a/ARE_FMAB.html
+++ b/ARE_FMAB.html
@@ -9,7 +9,7 @@
 	</head>
 	<body>
 		<!-- Nav -->
-		
+		<link rel="stylesheet" type="text/css" href="../assets/css/nav.css">
 			<ul>
   				<li><a href="index.html">Home</a></li>
 				<li><a href="ARE_Dev.html">Dev</a></li>
