--- a/ARE_SB.html
+++ b/ARE_SB.html
@@ -6,32 +6,10 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/sb.css" />
-		<style>
-ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
-
-}
-li {
-    float: left;
-}
-li a {
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
-}
-li a:hover {
-    background-color: yellow;
-}
-</style>
 	</head>
 	<body>
 		<!-- Nav -->
-		<link rel="stylesheet" type="text/css" href="../assets/css/nav.css">
+		<link rel="stylesheet" type="text/css" href=/assets/css/nav.css" />
 			<ul>
   				<li><a href="index.html">Home</a></li>
 				<li><a href="ARE_Dev.html">Dev</a></li>
